--- a/asta-web2/asta-web2/src/main/webapp/WEB-INF/web.xml
+++ b/asta-web2/asta-web2/src/main/webapp/WEB-INF/web.xml
@@ -5,6 +5,30 @@
 	version="2.5">
  
 	<display-name>Asta web</display-name>
+	
+	<servlet>
+	<servlet-name>astawebHibernateServlet</servlet-name>
+	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
+	<init-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>/WEB-INF/config/servletConfig.xml</param-value>
+	</init-param>
+	</servlet>
+
+	<servlet-mapping>
+		<servlet-name>astawebHibernateServlet</servlet-name>
+		<url-pattern>*.html</url-pattern>
+	</servlet-mapping>
+
+	<context-param>
+		<param-name>contextConfigLocation</param-name>
+		<param-value>classpath:/jpaContext.xml</param-value>
+	</context-param>
+
+	<listener>
+		<listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
+	</listener>
+
  
 	<servlet>
 		<servlet-name>mvc-dispatcher</servlet-name>
