--- a/asta-web2/asta-web2/src/main/webapp/WEB-INF/web.xml
+++ b/asta-web2/asta-web2/src/main/webapp/WEB-INF/web.xml
@@ -6,12 +6,18 @@
  
 	<display-name>Asta web</display-name>
 	
+	<welcome-file-list>
+		<welcome-file>index.jsp</welcome-file>
+	</welcome-file-list>
+	
 	<servlet>
 	<servlet-name>astawebHibernateServlet</servlet-name>
 	<servlet-class>org.springframework.web.servlet.DispatcherServlet</servlet-class>
 	<init-param>
 		<param-name>contextConfigLocation</param-name>
-		<param-value>/WEB-INF/config/servletConfig.xml</param-value>
+		<param-value>
+			/WEB-INF/config/servletConfig.xml
+		</param-value>
 	</init-param>
 	</servlet>
 
@@ -19,6 +25,15 @@
 		<servlet-name>astawebHibernateServlet</servlet-name>
 		<url-pattern>*.html</url-pattern>
 	</servlet-mapping>
+	
+	 <servlet>
+    <servlet-name>indexhtml</servlet-name> 
+    <jsp-file>/index.jsp</jsp-file>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>indexhtml</servlet-name>
+    <url-pattern>/index.html</url-pattern>
+</servlet-mapping> 
 
 	<context-param>
 		<param-name>contextConfigLocation</param-name>
