--- a/asta-web2/asta-web2/pom.xml
+++ b/asta-web2/asta-web2/pom.xml
@@ -186,6 +186,7 @@
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>tomcat-maven-plugin</artifactId>
 			        <configuration>
+			        <tomcatLoggingFile>tomcat_server.log</tomcatLoggingFile>
 					<port>5319</port>
 					<path>/asta-web2</path>
 					<systemProperties>
