--- a/asta-web2/asta-web2/pom.xml
+++ b/asta-web2/asta-web2/pom.xml
@@ -188,7 +188,7 @@
 			        <configuration>
 			        <tomcatLoggingFile>tomcat_server.log</tomcatLoggingFile>
 					<port>5319</port>
-					<path>/asta-web2</path>
+					<path>/app</path>
 					<systemProperties>
 						<server.property>alpha</server.property>
 					</systemProperties>
