--- a/asta-web2/asta-web2/pom.xml
+++ b/asta-web2/asta-web2/pom.xml
@@ -27,6 +27,18 @@
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
 		</dependency>
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
+
+
+		<dependency>
+			<groupId>org.springframework</groupId>
+			<artifactId>spring-test</artifactId>
+			<version>${spring.version}</version>
+		</dependency>
 
 		<!-- Spring Core -->
 		<dependency>
@@ -64,23 +76,23 @@
 			<artifactId>spring-webmvc</artifactId>
 			<version>${spring.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-core</artifactId>
-			<version>3.2.0.RELEASE</version>
+			<version>${spring.version}</version>
 		</dependency>
 
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-taglibs</artifactId>
-			<version>3.2.0.RELEASE</version>
+			<version>${spring.version}</version>
 		</dependency>
-		
+
 		<dependency>
 			<groupId>org.springframework.security</groupId>
 			<artifactId>spring-security-config</artifactId>
-			<version>3.2.0.RELEASE</version>
+			<version>${spring.version}</version>
 		</dependency>
 		<!-- jstl -->
 		<dependency>
@@ -123,7 +135,7 @@
 		<dependency>
 			<groupId>org.springframework</groupId>
 			<artifactId>spring-orm</artifactId>
-			<version>3.2.0.RELEASE</version>
+			<version>${spring.version}</version>
 		</dependency>
 		<dependency>
 			<groupId>org.springframework.data</groupId>
@@ -137,17 +149,17 @@
 			</exclusions>
 		</dependency>
 	</dependencies>
-	
+
 	<build>
 		<plugins>
 			<plugin>
-			        <groupId>org.apache.maven.plugins</groupId>
-			        <artifactId>maven-compiler-plugin</artifactId>
-		        	<version>2.3.2</version>
-			        <configuration>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-compiler-plugin</artifactId>
+				<version>2.3.2</version>
+				<configuration>
 					<source>1.6</source>
-				        <target>1.6</target>
-		        	</configuration>
+					<target>1.6</target>
+				</configuration>
 			</plugin>
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
@@ -156,43 +168,42 @@
 				</configuration>
 			</plugin>
 			<plugin>
-			        <groupId>org.apache.maven.plugins</groupId>
-			        <artifactId>maven-failsafe-plugin</artifactId>
-			        <version>2.9</version>
-			        <executions>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-failsafe-plugin</artifactId>
+				<version>2.9</version>
+				<executions>
 					<execution>
 						<id>integration-test</id>
 						<goals>
 							<goal>integration-test</goal>
 						</goals>
 					</execution>
-			        	<execution>
+					<execution>
 						<id>verify</id>
 						<goals>
-							<!-- set the goal to "verify" if you want the test to fail the build.
-							     set the goal to "integration-test", if you want the build to suceed even if the test fail.-->
+							<!-- set the goal to "verify" if you want the test to fail the build. 
+								set the goal to "integration-test", if you want the build to suceed even 
+								if the test fail. -->
 							<goal>verify</goal>
 						</goals>
 					</execution>
 				</executions>
 			</plugin>
-<!--Tomcat Embedded server, tested, works and used to replicate production environment
-	To run the app locally:
-		1) call mvn tomcat:run-war
-		2) browse to https://localhost:5310/path or http://localhost:5319/path
-		3) CTRL+C on Maven to close down server.
--->
+			<!--Tomcat Embedded server, tested, works and used to replicate production 
+				environment To run the app locally: 1) call mvn tomcat:run-war 2) browse 
+				to https://localhost:5310/path or http://localhost:5319/path 3) CTRL+C on 
+				Maven to close down server. -->
 			<plugin>
 				<groupId>org.codehaus.mojo</groupId>
 				<artifactId>tomcat-maven-plugin</artifactId>
-			        <configuration>
-			        <tomcatLoggingFile>tomcat_server.log</tomcatLoggingFile>
+				<configuration>
+					<tomcatLoggingFile>tomcat_server.log</tomcatLoggingFile>
 					<port>5319</port>
 					<path>/app</path>
 					<systemProperties>
 						<server.property>alpha</server.property>
 					</systemProperties>
-			        </configuration>
+				</configuration>
 				<executions>
 					<execution>
 						<id>start-tomcat</id>
@@ -200,11 +211,11 @@
 						<goals>
 							<goal>run-war</goal>
 						</goals>
-            					<configuration>
+						<configuration>
 							<fork>true</fork>
 						</configuration>
 					</execution>
-          				<execution>
+					<execution>
 						<id>stop-tomcat</id>
 						<phase>post-integration-test</phase>
 						<goals>
