Aggiunti processi. Aggiunta validazione date.

--- a/asta-web2/asta-web2/pom.xml
+++ b/asta-web2/asta-web2/pom.xml
@@ -203,7 +203,7 @@
 				<configuration>
 					<tomcatLoggingFile>tomcat_server.log</tomcatLoggingFile>
 					<port>5319</port>
-					<path>/app</path>
+					<path>/</path>
 					<systemProperties>
 						<server.property>alpha</server.property>
 					</systemProperties>
