--- a/asta-web2/asta-web2/pom.xml
+++ b/asta-web2/asta-web2/pom.xml
@@ -152,6 +152,16 @@
 				</exclusion>
 			</exclusions>
 		</dependency>
+		<dependency>
+			<groupId>javax.mail</groupId>
+			<artifactId>mail</artifactId>
+			<version>1.4</version>
+		</dependency>
+		<dependency>
+	<groupId>org.springframework</groupId>
+	<artifactId>spring-support</artifactId>
+	<version>2.0.8</version>
+</dependency>
 	</dependencies>
 
 	<build>
