--- a/asta-web2/asta-web2/pom.xml
+++ b/asta-web2/asta-web2/pom.xml
@@ -178,7 +178,7 @@
 			<plugin>
 				<artifactId>maven-war-plugin</artifactId>
 				<configuration>
-					<warName>asta-web2</warName>
+					<warName>app</warName>
 				</configuration>
 			</plugin>
 			<plugin>
