Live funziona il salvataggio immagini. Date col server sistemate. Prima versione pagina elenco oggetti in vendita.

--- a/asta-web2/asta-web2/src/main/resources/message.properties
+++ b/asta-web2/asta-web2/src/main/resources/message.properties
@@ -6,3 +6,6 @@ Past=Date of Birth must be in the past
 
 Size={0} must be between {2} and {1} characters long
 typeMismatch=Invalid format
+
+db.connection=jdbc:mysql://localhost:3306/cremo80_astadb
+#db.connection=jdbc:mysql://mysql1001.mochahost.com:3306/cremo80_astadb
