--- a/asta-web2/asta-web2/src/main/resources/log4j.properties
+++ b/asta-web2/asta-web2/src/main/resources/log4j.properties
@@ -1,5 +1,5 @@
 log4j.appender.R=org.apache.log4j.RollingFileAppender
-log4j.appender.R.File=${catalina.home}/logs/website.log
+log4j.appender.R.File=/home/cremo80/jvm/apache-tomcat-7.0.27/logs/website.log
 log4j.appender.R.layout=org.apache.log4j.PatternLayout
 log4j.appender.R.layout.ConversionPattern=%d [%t] %-5p %c - %m%n
 log4j.appender.R.MaxFileSize=2000KB
