sessione che non scade. BUF FIXED rilancio inferiore ad 1 euro

--- a/asta-web2/asta-web2/src/main/webapp/WEB-INF/web.xml
+++ b/asta-web2/asta-web2/src/main/webapp/WEB-INF/web.xml
@@ -6,7 +6,9 @@
  
 	<display-name>Asta web</display-name>
 	
-	
+	<session-config>
+		<session-timeout>-1</session-timeout>
+	</session-config>
 	
 	<servlet>
 	<servlet-name>astawebHibernateServlet</servlet-name>
