--- a/asta-web2/asta-web2/pom.xml
+++ b/asta-web2/asta-web2/pom.xml
@@ -162,6 +162,11 @@
 	<artifactId>spring-support</artifactId>
 	<version>2.0.8</version>
 </dependency>
+	<dependency>
+	<groupId>javax.validation</groupId>
+	<artifactId>validation-api</artifactId>
+	<version>1.1.0.Final</version>
+</dependency>
 	</dependencies>
 
 	<build>
